# LLM_Tech

./: .env.example  .gitignore  3_easy_methods_for_improving_LLM.ipynb  Advanced_RAG_From_Theory_to_LlamaIndex_Implementation.ipynb  An_Introduction_to_Prompting_for_LLMs.ipynb  Feature_Engineering_With_Latitude_and_Longitude.ipynb  Google_Gemma_Fine_tuning_Quantization_and_Inference.ipynb  Improve_tabular_data_predictions_with_LLM.ipynb  Pytorch_Introduction_Enter_NonLinear_Functions.ipynb  README.md  Semantic_Chunking_for_RAG.ipynb  advanced_rag_extracting_complex_pdfs_containing_tables_text_using_llamaparse.ipynb  building_a_rag_chain_using_langchain_expression_language_lcel.ipynb  finetuning_llms_use_case_examples.ipynb  invoice_or_bill_custom_parsing_using_instructor_gpt_4o.ipynb  llama_cpp_embeddings_llm_for_a_full_rag_stack.ipynb  the_role_of_hybrid_search_in_rag_applications.ipynb  these_are_the_3_langchain_functions_i_used_to_improve_my_rag.ipynb  unleash_mistral7b_finetuning.ipynb
fun_scripts/: coroutines.py  windows_version.py
poetry_cuda/: README.md  pyproject.toml
